2009-08-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Little performance improvements, one by one so it'll be easy to revert.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_effect):
	  Now don't hd_transition_fade(a_notification) even when the thing
	  is being unmapped.

2009-08-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/main.c:
	  Make sure "built with libmatchbox2 ..." remains
	  in the hildon-desktop executable.

2009-08-19  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.86

2009-08-19  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#133432 - long press to go to edit mode

	* src/home/hd-home.c (LONG_PRESS_DUR, _HdHomePrivate::long_press,
	  _HdHomePrivate::press_timeout, _HdHomePrivate::pressed_applet,
	  HdHomeDrag, hd_home_desktop_do_motion, hd_home_desktop_motion,
	  hd_home_desktop_do_release, press_timeout_cb,
	  hd_home_desktop_do_press, hd_home_desktop_release,
	  hd_home_desktop_press, hd_home_dispose, hd_home_applet_press,
	  do_applet_release, hd_home_applet_release, hd_home_applet_motion):
	  Implement long press to go to edit mode.

	* debian/changelog: update.

2009-08-19  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Apply patch from Laszlo Pere for NB#127974.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_property_changed): Track
	changes to HILDON_NON_COMPOSITED_WINDOW property.
	(hd_comp_mgr_is_non_composited): Add argument to force re-reading the
	property.
	* src/mb/hd-wm.c: Use the new calling convention for
	hd_comp_mgr_is_non_composited.

2009-08-19  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-app-mgr.c (hd_app_mgr_execute): Fix memory leak
	caused by removal of warning without removal of preceding
	"if" statement.

2009-08-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.85

2009-08-18  Gordon Williams <gordon.williams@collabora.co.uk>

	More improvements for NB#113278
	* src/mb/hd-comp-mgr.c: Make sure hd_transition fade is not called